Crates/simulatron-silk/src/lib/snapshots/simulatron_silk__tests__combine_external_internal.snap
---
source: src/lib/tests.rs
expression: parsed

---
---Symbols---
foobaz E
  0x00000008
foobaz0 I 0x00000004 
  0x00000000
---Sections---
Section 0 flags: 00010001 start: 0x00000000 length: 0x00000008
0x00000000    00 00 00 00  42 42 42 42                            |....BBBB|
Section 1 flags: 00010001 start: 0x00000008 length: 0x00000004
0x00000008    00 00 00 00                                         |....|

