Crates/simulatron-silk/src/lib/snapshots/simulatron_silk__tests__combine_external_reversed.snap
---
source: src/lib/tests.rs
expression: parsed

---
---Symbols---
bar I 0x00000012 
  0x00000005
  0x00000009
foobaz P 0x00000016 
  0x00000000
  0x0000000D
---Sections---
Section 0 flags: 00010001 start: 0x00000000 length: 0x00000004
0x00000000    00 00 00 00                                         |....|
Section 1 flags: 00010001 start: 0x00000004 length: 0x00000016
0x00000004    FF 00 00 00  00 00 00 00  00 00 00 00  00 FF AA AA  |................|
0x00000014    AA AA BB BB  BB BB                                  |......|

