Crates/simulatron-silk/src/lib/snapshots/simulatron_silk__tests__single_symbol_link.snap
---
source: simulatron-silk/src/lib/tests.rs
expression: "pretty_print_hex_block(&rom, ROM_BASE.try_into().unwrap())"

---
0x00000040    FF FF 00 00  00 46 FF FF  FF FF FF FF  00 00 00 46  |.....F.........F|
0x00000050    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000060    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000070    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000080    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000090    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000000A0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000000B0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000000C0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000000D0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000000E0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000000F0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000100    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000110    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000120    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000130    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000140    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000150    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000160    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000170    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000180    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000190    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000001A0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000001B0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000001C0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000001D0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000001E0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000001F0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000200    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000210    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000220    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000230    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
